--- a/package.json
+++ b/package.json
@@ -14,21 +14,24 @@
   },
   "devDependencies": {
     "browser-sync": "~2.27.7",
+    "del": "~6.0.0",
     "gulp": "~4.0.2",
     "gulp-autoprefixer": "~8.0.0",
     "gulp-cache": "~1.1.3",
     "gulp-clean-css": "~4.3.0",
-    "del": "~6.0.0",
     "gulp-imagemin": "~8.0.0",
+    "gulp-notify": "~4.0.0",
+    "gulp-rename": "~2.0.0",
+    "gulp-rigger": "~0.5.8",
+    "gulp-sass": "~5.0.0",
+    "gulp-ttf2eot": "^1.1.2",
+    "gulp-ttf2woff": "^1.1.1",
+    "gulp-ttf2woff2": "^4.0.1",
+    "gulp-uglify-es": "~3.0.0",
     "imagemin-gifsicle": "~7.0.0",
     "imagemin-mozjpeg": "~9.0.0",
     "imagemin-optipng": "~8.0.0",
     "imagemin-svgo": "~10.0.0",
-    "gulp-rigger": "~0.5.8",
-    "sass": "~1.43.5",
-    "gulp-sass": "~5.0.0",
-    "gulp-uglify-es": "~3.0.0",
-    "gulp-rename": "~2.0.0",
-    "gulp-notify": "~4.0.0"
+    "sass": "~1.43.5"
   }
 }
