--- a/package.json
+++ b/package.json
@@ -13,12 +13,19 @@
     "popper.js": "1.16.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.17.10",
+    "@babel/core": "^7.18.5",
+    "@babel/node": "^7.18.5",
+    "@babel/preset-env": "^7.18.2",
     "browser-sync": "~2.27.7",
     "del": "~6.0.0",
+    "eslint": "^8.18.0",
+    "eslint-config-google": "^0.14.0",
     "gulp": "~4.0.2",
     "gulp-autoprefixer": "~8.0.0",
     "gulp-cache": "~1.1.3",
     "gulp-clean-css": "~4.3.0",
+    "gulp-eslint": "^6.0.0",
     "gulp-imagemin": "~8.0.0",
     "gulp-notify": "~4.0.0",
     "gulp-rename": "~2.0.0",
